@@ -1,7 +1,8 @@
 4.13 (Work-in-progress): added support for importing and exporting XAO files;
 new quasi-transfinite 2d meshes (with fans); bug fixes.
 
-* New API functions: mesh/removeElements, option/restoreDefaults.
+* New API functions: mesh/removeElements, option/restoreDefaults,
+  logger/getMemory, logger/getTotalMemory.
 
 4.12.2 (January 21, 2024): small bug fixes.
 
